[tool.poetry]
name = "pyes"
version = "7.0.0"
description = ""
authors = ["Alberto Paro <alberto.paro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
elasticsearch = {extras = ["async"], version = "^7.10.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
